rusty-cdk-macros/tests/fails/schedule_rate_invalid_unit.rs
use rusty_cdk_macros::schedule_rate_expression;

fn main() {
    schedule_rate_expression!(5, "weeks");
}
